# knowledge-engine

./: .gitignore  CONTRIBUTING.md  Dockerfile  Makefile  README.md  SECURITY.md  docker-compose.yml  pyproject.toml  ruff.toml
.bootstrap/: chunk-00  chunk-01  chunk-02  chunk-03  chunk-04  chunk-05  chunk-06a  chunk-06b  chunk-06c
.github/: placement-proof-trigger.txt
.github/m25-7-archive/: part-00  part-01  part-02  part-03  part-04
.github/scripts/: m25_9_apply_exact_project_repair.py  m25_9_build_ai_token_repair.py
.github/workflows/: build-source-candidate.yml  ci.yml  deploy-oracle.yml  m17-failure-atlas.yml  (+392 more)
.m21-5-bootstrap/: docs.b64  source.b64  tests.b64  workflow.b64
.m21-6-bootstrap/: docs.b64  source-1.part  source-2.part  source-3.part  source-4.part  source.b64  tests.b64
.m25-4-finalization-payload/: chunk-01.b64  chunk-02.b64  chunk-03.b64  part-01.b64  part-02.b64  part-03.b64  part-04.b64  part-05.b64  part-06.b64  part-07.b64  part-08.b64
.m25-4-payload/: chunk-00.b64  chunk-01.b64  chunk-02.b64  chunk-03.b64  chunk-04.b64  chunk-05.b64  chunk-06.b64  chunk-07.b64  chunk-08.b64
.m25-5-payload/: READY  part-01.b64  part-02.b64  part-03.b64  part-04.b64  part-05.b64  part-06.b64  part-07.b64  part-08.b64
.m25-6-materialize/: READY  RETRY  RETRY-2  RETRY-3  manifest.json  part-001  part-002  part-003  part-004  part-005  part-006  part-007  part-008  part-009  part-010  part-011  part-012  part-013  part-014  part-015
deploy/: deploy.sh  knowledge-engine.service  rollback.sh
docs/: m12-golden-query-baseline.md  m12-golden-query-suite.md  m12-release-quality-gate.md  m12-runtime-query-evaluation.md
governed_batches/: m7-001-dry-run.json  m8-001-agent-execution-paths.json  m9-001-agent-planning-strategies.json  registry-v1.json  registry-v2.json  registry.json
production_promotions/: m5-agent-architecture-6d-6254725c.json  m6-001-llm-wiki-foundation.json  m8-001-agent-execution-paths.json  m9-001-agent-planning-strategies.json
review_batches/: agent-architecture-six-dimensions-v1.json
review_decisions/: batch_agent_architecture_six_dimensions_v1.approved.json
schemas/: compiler-extraction-candidate-v1.schema.json  compiler-input-v1.schema.json  compiler-resolution-v1.schema.json  compiler-source-map-v1.schema.json  compiler-structured-block-v1.schema.json  compiler-synthesis-proposal-v1.schema.json  intake-snapshot-v1.schema.json  m20-embedding-provider-contract-v1.schema.json  m20-semantic-metadata-v2.schema.json  m23-candidate-graph-v2.schema.json  m23-candidate-release-v1.schema.json  m23-candidate-semantic-query-v1.schema.json  m23-candidate-semantic-response-v1.schema.json  m23-candidate-shadow-response-v1.schema.json  m23-incremental-ingestion-message-v1.schema.json  m23-incremental-ingestion-receipt-v1.schema.json  m23-qdrant-ingestion-manifest-v1.schema.json  m25-4-daniel-approval-v1.schema.json  m25-adapter-envelope-v1.schema.json  m25-admission-checkpoint-v1.schema.json  m25-admission-plan-v1.schema.json  m25-admission-state-v1.schema.json  m25-adoption-evidence-v1.schema.json  m25-adoption-receipt-v1.schema.json  m25-authority-envelope-v1.schema.json  m25-batch-plan-v1.schema.json  m25-blog-batch-b-plan-v1.schema.json  m25-blog-batch-plan-v1.schema.json  m25-calibrated-identity-governance-v1.schema.json  m25-calibrated-identity-report-v1.schema.json  m25-candidate-policy-v1.schema.json  m25-extraction-receipt-v1.schema.json  m25-identity-adjudication-ledger-v1.schema.json  m25-identity-baseline-report-v1.schema.json  m25-identity-calibration-policy-v1.schema.json  m25-identity-gold-item-v1.schema.json  m25-identity-gold-suite-v1.schema.json  m25-identity-split-manifest-v1.schema.json  m25-model-policy-v1.schema.json  m25-normalized-output-v1.schema.json  (+50 more)
scripts/: __init__.py  bootstrap_m23_7_r3_8_placement_proof.py  configure_oracle_ssh.sh  governed_runtime_acceptance.py  m10_verify_production_baseline.py  m13_three_batch_acceptance.py  m14_feedback_r2_acceptance.py  m14_public_product_acceptance.py  m17_architecture_acceptance.py  m17_failure_atlas_acceptance.py  m17_ga_acceptance.py  m17_ga_evidence_acceptance.py  m17_operator_qualification_acceptance.py  m17_operator_runbook_acceptance.py  m17_operator_tooling_acceptance.py  m20_embedding_benchmark.py  m20_semantic_artifacts.py  m23_6_1_authority_acceptance.py  m23_6_2_ingestion_acceptance.py  m23_6_4_incremental_ingestion_acceptance.py  m23_6_5_candidate_runtime_acceptance.py  m23_6_6_candidate_release_acceptance.py  m23_6_7_acceptance.py  m23_7_1_acceptance_contract.py  m23_7_1_quality_contract_acceptance.py  m23_7_2_offline_retrieval.py  m23_7_2_offline_retrieval_evaluation.py  m23_7_3_shadow_replay.py  m23_7_4_candidate_answer.py  m23_7_5_latency_diagnostic.py  m23_7_5_live_shadow.py  m23_7_6_failure_rebuild_rollback.py  m23_7_7_final_readiness.py  m23_7_7_operator_qualification.py  m23_7_8_final_decision.py  m23_7_r1_semantic_alignment.py  m23_7_r2_latency_path.py  m23_7_r2_regional_binding.py  m23_7_r2_worker_config.py  m23_7_r3_1_root_cause.py  (+78 more)
tests/: conftest.py  m25_2_test_support.py  test_api.py  test_auth.py  test_batch_registry.py  test_batch_spec_core.py  test_candidate.py  test_compiler_publisher.py  test_compiler_resolution_v1.py  test_compiler_review_governance_v1.py  test_compiler_source_validation_v1.py  test_compiler_synthesis_review_v1.py  test_compiler_v1.py  test_config.py  test_database_intake.py  test_delivery.py  test_dispatch_workflow.py  test_drive_intake.py  test_git_intake.py  test_golden_query_baseline.py  test_golden_query_suite.py  test_governed_runtime_acceptance.py  test_graph_v2.py  test_idempotent_replay_approval.py  test_intake.py  test_intake_v1.py  test_ledger.py  test_ledger_precondition_state.py  test_m10_closure.py  test_m11_architecture.py  test_m11_m12_hardening_v2.py  test_m12_metrics_and_final_gate.py  test_m13_acceptance.py  test_m13_acceptance_surface.py  test_m13_contracts.py  test_m13_coordinator.py  test_m13_coordinator_surface.py  test_m13_lifecycle_rules.py  test_m13_operator_closeout.py  test_m13_operator_surface.py  (+243 more)
(+1364 files in other folders)
