[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "knowledge-engine"
version = "0.2.0"
description = "R2-backed Knowledge OS builder and runtime"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "boto3>=1.35,<2",
  "fastapi>=0.115,<1",
  "httpx>=0.28,<1",
  "PyJWT[crypto]>=2.10,<3",
  "PyYAML>=6.0,<7",
  "uvicorn[standard]>=0.34,<1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3,<9",
  "pytest-cov>=6,<7",
  "ruff>=0.9,<1",
]

[project.scripts]
knowledge-engine = "knowledge_engine.cli:main"
knowledge-intake = "knowledge_engine.intake_cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/knowledge_engine"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests", "scripts"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.lint.per-file-ignores]
"src/knowledge_engine/api.py" = ["B008"]
