[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "knowledge-engine"
version = "0.2.0"
description = "R2-backed Knowledge OS builder and runtime"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "boto3>=1.35,<2",
  "fastapi>=0.115,<1",
  "httpx>=0.28,<1",
  "pypdf==6.14.2",
  "PyJWT[crypto]>=2.10,<3",
  "PyYAML>=6.0,<7",
  "uvicorn[standard]>=0.34,<1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3,<9",
  "pytest-cov>=6,<7",
  "ruff>=0.9,<1",
]

[project.scripts]
knowledge-engine = "knowledge_engine.cli:main"
knowledge-intake = "knowledge_engine.intake_cli:main"
knowledge-synthesis = "knowledge_engine.synthesis_cli:main"
knowledge-resolution = "knowledge_engine.resolution_cli:main"
knowledge-review = "knowledge_engine.review_cli:main"
knowledge-m13 = "knowledge_engine.m13_cli:main"
knowledge-inspect = "knowledge_engine.m17_operator_tools_cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/knowledge_engine"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-ra --strict-markers"

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests", "scripts"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.lint.per-file-ignores]
"scripts/m10_verify_production_baseline.py" = ["B008", "E501"]
"src/knowledge_engine/api.py" = ["B008"]
"src/knowledge_engine/compiler_source_pr_package_v1.py" = ["E501", "UP012"]
"src/knowledge_engine/database_bundle.py" = ["E501", "I001"]
"src/knowledge_engine/database_intake.py" = ["E501"]
"src/knowledge_engine/drive_client.py" = ["E501"]
"src/knowledge_engine/drive_intake.py" = ["E501", "SIM102"]
"src/knowledge_engine/git_intake.py" = ["E501"]
"src/knowledge_engine/intake.py" = ["UP012"]
"src/knowledge_engine/intake_v1.py" = ["SIM102"]
"src/knowledge_engine/m15_freshness_impact.py" = ["E501", "UP035", "UP037"]
"src/knowledge_engine/m15_governance_health.py" = ["E501", "F401", "UP037"]
"src/knowledge_engine/m15_observability_contracts.py" = ["E501", "UP017", "UP037"]
"src/knowledge_engine/m15_release_health.py" = ["E501", "UP035", "UP037"]
"src/knowledge_engine/m16_acl_injection_security.py" = ["E501"]
"src/knowledge_engine/m16_promotion_containment.py" = ["E501"]
"src/knowledge_engine/m16_r2_object_restoration.py" = ["B009", "E501"]
"src/knowledge_engine/m16_replay_recovery_objectives.py" = ["B905", "E501", "SIM102"]
"src/knowledge_engine/m16_restore_drill_closure.py" = ["E501", "SIM102"]
"src/knowledge_engine/m16_source_control_plane_reconstruction.py" = ["E501", "SIM102"]
"src/knowledge_engine/m17_operator_runbooks.py" = ["E501"]
"src/knowledge_engine/media_bundle.py" = ["E501", "F401", "SIM109"]
"src/knowledge_engine/media_intake.py" = ["E501"]
"src/knowledge_engine/meeting_bundle.py" = ["E501"]
"src/knowledge_engine/meeting_intake.py" = ["E501"]
"src/knowledge_engine/pdf_intake.py" = ["E501", "F401"]
"src/knowledge_engine/review.py" = ["UP012", "E501"]
"src/knowledge_engine/web_intake_v1.py" = ["E501", "F401", "SIM114"]
"tests/test_compiler_resolution_v1.py" = ["I001"]
"tests/test_compiler_review_governance_v1.py" = ["E501", "F401", "I001"]
"tests/test_compiler_synthesis_review_v1.py" = ["I001"]
"tests/test_database_intake.py" = ["E501", "UP035"]
"tests/test_drive_intake.py" = ["E501"]
"tests/test_git_intake.py" = ["UP022"]
"tests/test_m10_closure.py" = ["E501", "I001", "SIM300"]
"tests/test_m15_freshness_impact.py" = ["E501"]
"tests/test_m15_governance_health.py" = ["E501"]
"tests/test_m15_observability_contracts.py" = ["E501", "UP017"]
"tests/test_m15_release_health.py" = ["E501"]
"tests/test_m16_r2_object_restoration.py" = ["E501"]
"tests/test_m16_replay_recovery_objectives.py" = ["E501"]
"tests/test_m16_restore_drill_closure.py" = ["E501"]
"tests/test_m16_source_control_plane_reconstruction.py" = ["E501"]
"tests/test_media_intake.py" = ["E501", "UP012"]
"tests/test_meeting_intake.py" = ["E501", "UP035"]
"tests/test_review.py" = ["E501"]
