[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "knowledge-engine"
version = "0.2.0"
description = "R2-backed Knowledge OS builder and runtime"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "boto3>=1.35,<2",
  "fastapi>=0.115,<1",
  "httpx>=0.28,<1",
  "pypdf==6.14.2",
  "PyJWT[crypto]>=2.10,<3",
  "PyYAML>=6.0,<7",
  "uvicorn[standard]>=0.34,<1",
]

[project.optional-dependencies]
dev = [
  "playwright>=1.45,<2",
  "pytest>=8.3,<9",
  "pytest-cov>=6,<7",
  "ruff>=0.9,<1",
  "jsonschema>=4.23,<5",
]

[project.scripts]
knowledge-engine = "knowledge_engine.cli:main"
knowledge-intake = "knowledge_engine.intake_cli:main"
knowledge-synthesis = "knowledge_engine.synthesis_cli:main"
knowledge-resolution = "knowledge_engine.resolution_cli:main"
knowledge-review = "knowledge_engine.review_cli:main"
knowledge-m13 = "knowledge_engine.m13_cli:main"
knowledge-inspect = "knowledge_engine.m17_operator_tools_cli:main"
knowledge-qualify = "knowledge_engine.m17_operator_qualification_cli:main"
knowledge-ga = "knowledge_engine.m17_ga_acceptance_cli:main"
knowledge-m23-intake = "knowledge_engine.m23_live_intake_cli:main"
knowledge-m23-extract = "knowledge_engine.m23_real_ai_extraction_cli:main"
knowledge-m23-review = "knowledge_engine.m23_human_review_source_pr_cli:main"
knowledge-m23-embed = "knowledge_engine.m23_cloudflare_qdrant_cli:main"
knowledge-m23-rebenchmark = "knowledge_engine.m23_benchmark_correction_cli:main"
knowledge-m23-ingestion-plan = "knowledge_engine.m23_qdrant_pilot_ingestion_cli:main"
knowledge-m25-admission = "knowledge_engine.m25_intake_orchestrator_cli:main"
knowledge-m25-extraction = "knowledge_engine.m25_extraction_cli:main"
knowledge-m25-identity-benchmark = "knowledge_engine.m25_identity_benchmark_cli:main"
knowledge-m25-identity-governance = "knowledge_engine.m25_identity_governance_cli:main"
knowledge-m25-review-surface = "knowledge_engine.m25_review_surface_cli:main"
knowledge-m25-source-pr = "knowledge_engine.m25_source_pr_executor_cli:main"
knowledge-m25-adoption = "knowledge_engine.m25_adoption_release_cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/knowledge_engine"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = [".", "tests"]
addopts = "-ra --strict-markers"

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests", "scripts"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.lint.per-file-ignores]
"src/knowledge_engine/m25_review_surface.py" = ["B008", "E501"]
"scripts/m10_verify_production_baseline.py" = ["B008", "E501"]
"src/knowledge_engine/api.py" = ["B008"]
"src/knowledge_engine/compiler_source_pr_package_v1.py" = ["E501", "UP012"]
"src/knowledge_engine/database_bundle.py" = ["E501", "I001"]
"src/knowledge_engine/database_intake.py" = ["E501"]
"src/knowledge_engine/drive_client.py" = ["E501"]
"src/knowledge_engine/drive_intake.py" = ["E501", "SIM102"]
"src/knowledge_engine/git_intake.py" = ["E501"]
"src/knowledge_engine/intake.py" = ["UP012"]
"src/knowledge_engine/intake_v1.py" = ["SIM102"]
"src/knowledge_engine/m15_freshness_impact.py" = ["E501", "UP035", "UP037"]
"src/knowledge_engine/m15_governance_health.py" = ["E501", "F401", "UP037"]
"src/knowledge_engine/m15_observability_contracts.py" = ["E501", "UP017", "UP037"]
"src/knowledge_engine/m15_release_health.py" = ["E501", "UP035", "UP037"]
"src/knowledge_engine/m16_acl_injection_security.py" = ["E501"]
"src/knowledge_engine/m16_promotion_containment.py" = ["E501"]
"src/knowledge_engine/m16_r2_object_restoration.py" = ["B009", "E501"]
"src/knowledge_engine/m16_replay_recovery_objectives.py" = ["B905", "E501", "SIM102"]
"src/knowledge_engine/m16_restore_drill_closure.py" = ["E501", "SIM102"]
"src/knowledge_engine/m16_source_control_plane_reconstruction.py" = ["E501", "SIM102"]
"src/knowledge_engine/m17_ga_acceptance.py" = ["E501"]
"src/knowledge_engine/m17_ga_evidence.py" = ["E501"]
"src/knowledge_engine/m17_operator_qualification.py" = ["E501"]
"src/knowledge_engine/m17_operator_runbooks.py" = ["E501"]
"src/knowledge_engine/m17_operator_tooling_contract.py" = ["E501"]
"src/knowledge_engine/m17_operator_tools.py" = ["E501", "UP035", "UP036"]
"src/knowledge_engine/m23_7_3_shadow_replay.py" = ["I001"]
"src/knowledge_engine/m23_7_4_candidate_answer.py" = ["E501"]
"src/knowledge_engine/m23_7_7_operator_qualification.py" = ["E501"]
"src/knowledge_engine/m23_benchmark_correction.py" = ["F401"]
"src/knowledge_engine/m23_benchmark_decision.py" = ["I001"]
"src/knowledge_engine/m23_benchmark_evaluation.py" = ["I001"]
"src/knowledge_engine/m23_cloudflare_qdrant.py" = ["UP038"]
"src/knowledge_engine/m23_qdrant_first_upsert.py" = ["E501"]
"src/knowledge_engine/m23_real_ai_extraction.py" = ["E501"]
"src/knowledge_engine/m25_identity_benchmark.py" = ["E501"]
"src/knowledge_engine/m26_answer_evaluation.py" = ["E501"]
"src/knowledge_engine/m26_answer_presentation.py" = ["E501"]
"src/knowledge_engine/m26_candidate_qa_feedback.py" = ["E501"]
"src/knowledge_engine/m26_draft_answer.py" = ["E501", "I001"]
"src/knowledge_engine/m26_preview_candidate_bundle.py" = ["E501"]
"src/knowledge_engine/m26_provider_mock.py" = ["E501"]
"src/knowledge_engine/media_bundle.py" = ["E501", "F401", "SIM109"]
"src/knowledge_engine/media_intake.py" = ["E501"]
"src/knowledge_engine/meeting_bundle.py" = ["E501"]
"src/knowledge_engine/meeting_intake.py" = ["E501"]
"src/knowledge_engine/pdf_intake.py" = ["E501", "F401"]
"src/knowledge_engine/review.py" = ["UP012", "E501"]
"src/knowledge_engine/web_intake_v1.py" = ["E501", "F401", "SIM114"]
"tests/test_compiler_resolution_v1.py" = ["I001"]
"tests/test_compiler_review_governance_v1.py" = ["E501", "F401", "I001"]
"tests/test_compiler_synthesis_review_v1.py" = ["I001"]
"tests/test_database_intake.py" = ["E501", "UP035"]
"tests/test_drive_intake.py" = ["E501"]
"tests/test_git_intake.py" = ["UP022"]
"tests/test_m10_closure.py" = ["E501", "I001", "SIM300"]
"tests/test_m15_freshness_impact.py" = ["E501"]
"tests/test_m15_governance_health.py" = ["E501"]
"tests/test_m15_observability_contracts.py" = ["E501", "UP017"]
"tests/test_m15_release_health.py" = ["E501"]
"tests/test_m17_operator_tools.py" = ["E501"]
"tests/test_m23_3_real_ai_extraction.py" = ["E501"]
"tests/test_m23_5_cloudflare_qdrant.py" = ["SIM117"]
"tests/test_m23_6_2a_real_evidence_compat.py" = ["I001"]
"tests/test_m23_6_3_first_pilot_upsert.py" = ["E501", "I001"]
"tests/test_m25_3_extraction_worker.py" = ["E501"]
"tests/test_m26_4_provider_mock.py" = ["E501"]
"tests/test_m26_5_draft_answer.py" = ["E501", "I001"]
"tests/test_m26_6_answer_evaluation.py" = ["E501", "I001"]
"tests/test_m26_7_answer_presentation.py" = ["E501", "I001"]
"tests/test_m26_8_preview_candidate_bundle.py" = ["E501", "I001"]
"tests/test_m26_9_candidate_qa_feedback.py" = ["E501", "I001"]
"tests/test_meeting_intake.py" = ["E501", "UP035"]
"tests/test_review.py" = ["E501"]
